RESOLVED FIXED 121073
HTMLTextAreaElement no longer needs custom style resolve callbacks.
https://bugs.webkit.org/show_bug.cgi?id=121073
Summary HTMLTextAreaElement no longer needs custom style resolve callbacks.
Andreas Kling
Reported 2013-09-09 20:31:53 PDT
HTMLTextAreaElement no longer needs custom style resolve callbacks.
Attachments
Patch (1.36 KB, patch)
2013-09-09 20:32 PDT, Andreas Kling
rniwa: review+
Andreas Kling
Comment 1 2013-09-09 20:32:26 PDT
Ryosuke Niwa
Comment 2 2013-09-09 21:07:49 PDT
Comment on attachment 211147 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=211147&action=review > Source/WebCore/ChangeLog:9 > + Now that it doesn't override didAttachRenderer() anymore, there's no need > + to fire callbacks for textarea elements during style resolve. Please refer to http://trac.webkit.org/changeset/155408.
Andreas Kling
Comment 3 2013-09-09 23:06:47 PDT
Andreas Kling
Comment 4 2013-09-09 23:10:27 PDT
Manual commits are hard. Accident cleanup: <http://trac.webkit.org/changeset/155421>
Note You need to log in before you can comment on or make changes to this bug.