HTMLTextAreaElement no longer needs custom style resolve callbacks. <https://webkit.org/b/121073>

Reviewed by Ryosuke Niwa.

After r155408 HTMLTextAreaElement doesn't override didAttachRenderer() anymore,
so we don't need to fire callbacks on textarea elements during style resolve.

* html/HTMLTextAreaElement.cpp:
(WebCore::HTMLTextAreaElement::HTMLTextAreaElement):

Canonical link: https://commits.webkit.org/138993@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@155419 268f45cc-cd09-0410-ab3c-d52691b4dbfc